fix: [rgoex-772] added z-index for header

--- a/paragon/blocks/_header.scss
+++ b/paragon/blocks/_header.scss
@@ -3,6 +3,7 @@
     header.learning-header {
         box-shadow: 0 0 6px 0 rgba($black, .75);
         padding: $header-vertical-padding 0;
+        z-index: 1;
 
         .logo {
             padding: 0;
